fix(z-index): add z-index to buttons, card-link & dropdown

--- a/apps/site/src/assets/scss/components/button.scss
+++ b/apps/site/src/assets/scss/components/button.scss
@@ -1,6 +1,6 @@
 %button {
     transition: box-shadow 0.3s ease-in-out, filter 0.3s ease-in-out;
-    @apply text-white cursor-pointer rounded-lg px-3 py-1;
+    @apply text-white cursor-pointer rounded-lg px-3 py-1 z-10;
 
     &:disabled {
         opacity: 0.5;
